# config-manager

./: .gitignore  README.md  _commit_msg.txt  pyproject.toml
.github/workflows/: ci.yml
src/config_manager/: manager.py
src/refconf_manager/: manager.py
tests/: test_manager.py
